--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,9 @@
             <li class="hrk" data-toggle="tooltip" data-placement="top" title="Kuny chorwackie"></li>
           </ul>
         </div>
+        <div class="prices">
+          
+        </div>
         <div class="about text-center">
           <p>Działamy od 1992r</p>
         </div>
