--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
+    <!-- SCRIPTS -->
     <script src="./js/jquery.min.js"></script>
     <script src="./js/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script type="text/javascript">
       $(window).on('load', function(){
-        $(".loader").delay(1200).fadeOut(1500);
+        $(".loader").delay(1000).fadeOut(1000);
       })
     </script>
   </head>
@@ -21,12 +22,12 @@
   <body>
     <section class="loader"></section>
     <main>
-      <div class="container-fluid">
-        <div class="title text-center mt-4 mb-4">
-          <h1>KANTOR</h1>
-          <h2>SŁUPCA</h2>
+      <div class="container-fluid px-0">
+        <div class="title text-center bg-custom mb-4 p-4">
+          <h1 class="tracking-in-expand">KANTOR</h1>
+          <h2 class="tracking-in-expand">SŁUPCA</h2>
         </div>
-        <div class="currency text-center mt-4 mb-42">
+        <div class="currency text-center mt-4 mb-4">
           <ul class="list-inline d-flex justify-content-center align-items-center flex-wrap">
             <li class="eur" data-toggle="tooltip" data-placement="top" title="EURO"></li>
             <li class="usd" data-toggle="tooltip" data-placement="top" title="Dolar amerykański"></li>
@@ -41,25 +42,68 @@
             <li class="hrk" data-toggle="tooltip" data-placement="top" title="Kuny chorwackie"></li>
           </ul>
         </div>
-        <div class="prices">
-
-        </div>
         <div class="about text-center">
-          <p>Działamy od 1992r</p>
+          <p class="text-focus-in">Działamy od 1992r.</p>
         </div>
         <div class="info text-center mt-4 mb-4">
-          <h4>Kontakt pod numerem:</h4>
-          <button class="btn btn-info btn-lg mt-4 mb-4" type="button">
+          <h4 class="text-focus-in">Kontakt pod numerem:</h4>
+          <button class="btn btn-info btn-lg mt-4 mb-4 scale-in-center" type="button">
             <a class="text-white" href="tel:+48605556326">+48 605 556 326</a>
           </button>
         </div>
-        <div class="places">
-          <div class="row">
+        <div class="prices mt-4 mb-4">
+          <div class="row d-flex flex-wrap justify-content-center align-items-center">
+            <div class="card col-sm-12 m-2 p-0 text-center border-white">
+              <div class="card-body bg-custom">
+                <h5 id="time" class="card-title">Data</h5>
+                <p class="card-text">ŚREDNIE KURSY NBP</p>
+              </div>
+            </div>
+            <div class="card col-sm-4 m-2 text-center">
+              <div class="card-body">
+                <h5 id="pairEURPLN" class="card-title">0.00</h5>
+                <p class="card-text">EUR / PLN</p>
+              </div>
+            </div>
+            <div class="card col-sm-4 m-2 text-center">
+              <div class="card-body">
+                <h5 id="pairUSDPLN" class="card-title">0.00</h5>
+                <p class="card-text">USD / PLN</p>
+              </div>
+            </div>
+            <div class="card col-sm-4 m-2 text-center">
+              <div class="card-body">
+                <h5 id="pairGBPLN" class="card-title">0.00</h5>
+                <p class="card-text">GBP / PLN</p>
+              </div>
+            </div>
+            <div class="card col-sm-4 m-2 text-center">
+              <div class="card-body">
+                <h5 id="pairCHFPLN" class="card-title">0.00</h5>
+                <p class="card-text">CHF / PLN</p>
+              </div>
+            </div>
+            <div class="card col-sm-12 m-2 text-center border-white">
+              <div class="card-body">
+                <div class="d-flex justify-content-center">
+                  <button id="newPrices" type="button" class="btn btn-info btn-lg">Aktualizuj</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="places p-0 text-center">
+          <div class="row d-flex flex-wrap justify-content-center align-items-center">
+            <div class="card col-sm-12 m-2 px-0 border-white">
+              <div class="card-body bg-custom">
+                <h4 class="p-0 m-0">PLACÓWKI</h4>
+              </div>
+            </div>
             <div class="col-sm-4">
               <div class="card m-3 text-center">
                 <div class="card-header"><a class="text-dark" href="https://www.google.pl/maps/place/Kantor+Wymiany+Walut/@52.242918,18.094791,15z/data=!4m5!3m4!1s0x0:0xbb651c3a2653d198!8m2!3d52.242918!4d18.094791">Kantor Golina</a></div>
                 <div class="card-body">
-                  <h5 class="card-title">ul.Mickiewicza 2</h5>
+                  <h5 class="card-title"><a class="text-dark" href="https://www.google.pl/maps/place/Kantor+Wymiany+Walut/@52.242918,18.094791,15z/data=!4m5!3m4!1s0x0:0xbb651c3a2653d198!8m2!3d52.242918!4d18.094791">ul.Mickiewicza 2</a></h5>
                   <p class="card-text">Godziny otwarcia:
                     <br>PON-PT 8:00 - 17:00
                     <br>SOB 8:00 - 13:00
@@ -71,7 +115,7 @@
               <div class="card m-3 text-center">
                 <div class="card-header"><a class="text-dark" href="https://www.google.pl/maps/place/Kantor+Wymiany+Walut+Celmer/@52.2895062,17.8684693,17z/data=!3m1!4b1!4m5!3m4!1s0x4704c60812a6af5d:0x5ed562924c24e5a2!8m2!3d52.2895029!4d17.870658">Kantor Słupca</a></div>
                 <div class="card-body">
-                  <h5 class="card-title">ul.Pułaskiego 2</h5>
+                  <h5 class="card-title"><a class="text-dark" href="https://www.google.pl/maps/place/Kantor+Wymiany+Walut+Celmer/@52.2895062,17.8684693,17z/data=!3m1!4b1!4m5!3m4!1s0x4704c60812a6af5d:0x5ed562924c24e5a2!8m2!3d52.2895029!4d17.870658">ul.Pułaskiego 2</a></h5>
                   <p class="card-text">Godziny otwarcia:
                     <br>PON-PT 8:00 - 17:00
                     <br>SOB 8:00 - 13:00
@@ -83,7 +127,7 @@
               <div class="card m-3 text-center">
                 <div class="card-header"><a class="text-dark" href="https://www.google.pl/maps/place/Kantor+Wymiany+Walut/@52.44019,17.7714913,17z/data=!3m1!4b1!4m5!3m4!1s0x4704be52225b64a3:0x6b792cc878e44d3f!8m2!3d52.44019!4d17.77368">Kantor Witkowo</a></div>
                 <div class="card-body">
-                  <h5 class="card-title">ul.Stary Rynek 4</h5>
+                  <h5 class="card-title"><a class="text-dark" href="https://www.google.pl/maps/place/Kantor+Wymiany+Walut/@52.44019,17.7714913,17z/data=!3m1!4b1!4m5!3m4!1s0x4704be52225b64a3:0x6b792cc878e44d3f!8m2!3d52.44019!4d17.77368">ul.Stary Rynek 4</a></h5>
                   <p class="card-text">Godziny otwarcia:
                     <br>PON-PT 8:30 - 16:30
                     <br>SOB 8:30 - 13:00
@@ -95,6 +139,9 @@
         </div>
       </div>
     </main>
+    <footer>
+      <div class="footer-copyright text-center mt-4 py-3 bg-custom">© 2018 Copyright: Kantor Wymiany Walut Słupca</div>
+    </footer>
 
     <!-- SCRIPTS -->
     <script src="./js/app.js"></script>
