--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <section class="loader"></section>
     <main>
       <div class="container-fluid px-0">
-        <div class="title text-center bg-custom mb-4 p-4">
+        <div class="title text-center mb-4 p-4">
           <h1 class="tracking-in-expand">KANTOR</h1>
           <h2 class="tracking-in-expand">SŁUPCA</h2>
         </div>
@@ -59,25 +59,25 @@
                 <p class="card-text">ŚREDNIE KURSY NBP</p>
               </div>
             </div>
-            <div class="card col-sm-4 m-2 text-center">
+            <div class="card col-sm-4 m-2 text-center shadow">
               <div class="card-body">
                 <h5 id="pairEURPLN" class="card-title">0.00</h5>
                 <p class="card-text">EUR / PLN</p>
               </div>
             </div>
-            <div class="card col-sm-4 m-2 text-center">
+            <div class="card col-sm-4 m-2 text-center shadow">
               <div class="card-body">
                 <h5 id="pairUSDPLN" class="card-title">0.00</h5>
                 <p class="card-text">USD / PLN</p>
               </div>
             </div>
-            <div class="card col-sm-4 m-2 text-center">
+            <div class="card col-sm-4 m-2 text-center shadow">
               <div class="card-body">
                 <h5 id="pairGBPLN" class="card-title">0.00</h5>
                 <p class="card-text">GBP / PLN</p>
               </div>
             </div>
-            <div class="card col-sm-4 m-2 text-center">
+            <div class="card col-sm-4 m-2 text-center shadow">
               <div class="card-body">
                 <h5 id="pairCHFPLN" class="card-title">0.00</h5>
                 <p class="card-text">CHF / PLN</p>
@@ -100,7 +100,7 @@
               </div>
             </div>
             <div class="col-sm-4">
-              <div class="card m-3 text-center">
+              <div class="card m-3 text-center shadow">
                 <div class="card-header"><a class="text-dark" href="https://www.google.pl/maps/place/Kantor+Wymiany+Walut/@52.242918,18.094791,15z/data=!4m5!3m4!1s0x0:0xbb651c3a2653d198!8m2!3d52.242918!4d18.094791">Kantor Golina</a></div>
                 <div class="card-body">
                   <h5 class="card-title"><a class="text-dark" href="https://www.google.pl/maps/place/Kantor+Wymiany+Walut/@52.242918,18.094791,15z/data=!4m5!3m4!1s0x0:0xbb651c3a2653d198!8m2!3d52.242918!4d18.094791">ul.Mickiewicza 2</a></h5>
@@ -112,7 +112,7 @@
               </div>
             </div>
             <div class="col-sm-4">
-              <div class="card m-3 text-center">
+              <div class="card m-3 text-center shadow">
                 <div class="card-header"><a class="text-dark" href="https://www.google.pl/maps/place/Kantor+Wymiany+Walut+Celmer/@52.2895062,17.8684693,17z/data=!3m1!4b1!4m5!3m4!1s0x4704c60812a6af5d:0x5ed562924c24e5a2!8m2!3d52.2895029!4d17.870658">Kantor Słupca</a></div>
                 <div class="card-body">
                   <h5 class="card-title"><a class="text-dark" href="https://www.google.pl/maps/place/Kantor+Wymiany+Walut+Celmer/@52.2895062,17.8684693,17z/data=!3m1!4b1!4m5!3m4!1s0x4704c60812a6af5d:0x5ed562924c24e5a2!8m2!3d52.2895029!4d17.870658">ul.Pułaskiego 2</a></h5>
@@ -124,7 +124,7 @@
               </div>
             </div>
             <div class="col-sm-4">
-              <div class="card m-3 text-center">
+              <div class="card m-3 text-center shadow">
                 <div class="card-header"><a class="text-dark" href="https://www.google.pl/maps/place/Kantor+Wymiany+Walut/@52.44019,17.7714913,17z/data=!3m1!4b1!4m5!3m4!1s0x4704be52225b64a3:0x6b792cc878e44d3f!8m2!3d52.44019!4d17.77368">Kantor Witkowo</a></div>
                 <div class="card-body">
                   <h5 class="card-title"><a class="text-dark" href="https://www.google.pl/maps/place/Kantor+Wymiany+Walut/@52.44019,17.7714913,17z/data=!3m1!4b1!4m5!3m4!1s0x4704be52225b64a3:0x6b792cc878e44d3f!8m2!3d52.44019!4d17.77368">ul.Stary Rynek 4</a></h5>
